fixed having to use invisible image

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,26 +29,17 @@ text-center {
   margin-top: 7px;
   margin-right: 13px;
 }
-.album-section {
-  background-color: rgba(123, 123, 123, 0.433);
+img {
   height: 45vh;
   width: 90%;
   margin: 0 auto;
   border-radius: 20px;
-  background: url("/assets/img/jade-scarlato-DxuqACobFoM-unsplash.jpg") no-repeat
-    center center fixed;
   background-size: cover;
+  display: block;
+  aspect-ratio: auto;
+  object-fit: cover;
 }
-img{
-    height: 54vh;
-    opacity: 0;
-    position: absolute;
-    width: 95%;
-    margin: 0 auto;
-    border-radius: 20px;
-    display: block;
-    image-rendering: optimizeQuality;
-}
+
 .track-details {
   text-align: center;
   font-family: sans-serif;
